📦 files component breaked in small files

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,6 @@
 @import 'theme';
 @import 'experienceBox';
 @import 'downArrowIcon';
+@import 'companyLocation';
+@import 'roleFromto';
+@import 'details';
