--- a/scss/_experienceBox.scss
+++ b/scss/_experienceBox.scss
@@ -1,21 +1,11 @@
-.#{$rpe-namespace}__company-name {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: var(--company-name-color);
-
-  @media #{$rpe-mobile} {
-    font-size: 1.25rem;
-  }
-}
-
 .#{$rpe-namespace}__main-container {
   align-items: flex-end;
   display: flex;
   gap: 0.5rem;
   padding: 1rem;
-
   @media #{$rpe-mobile} {
     display: block;
+    padding: 0.5rem;
   }
 }
 
@@ -28,35 +18,4 @@
   @media #{$rpe-mobile} {
     width: 100%;
   }
-}
-
-.#{$rpe-namespace}__company-name-and-location-wrapper {
-  display: flex;
-  justify-content: space-between;
-  gap: 0.5rem;
-}
-
-.#{$rpe-namespace}__role-and-fromto-wrapper {
-  display: flex;
-  justify-content: space-between;
-  gap: 0.5rem;
-  margin-top: 0.5rem;
-}
-
-.#{$rpe-namespace}__details {
-  margin-top: 0.5rem;
-  text-align: justify;
-  overflow: hidden;
-  color: #4a5568;
-}
-
-.#{$rpe-namespace}__role {
-  font-weight: 600;
-}
-
-.#{$rpe-namespace}__location-wrapper {
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  color: #3b82f6;
 }
