--- a/scss/_details.scss
+++ b/scss/_details.scss
@@ -3,4 +3,14 @@
   text-align: justify;
   overflow: hidden;
   color: #4a5568;
+  transition: all 0.5s ease-in-out;
+}
+
+.#{$rpe-namespace}__details {
+  &--expand {
+    max-height: 400px;
+  }
+  &--collapse {
+    max-height: 0;
+  }
 }
